added new-releases(homePage)(auth: Medhashree)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 
 <homepage-navbar></homepage-navbar>
+<nav-options></nav-options>
+<new-releases></new-releases>
 <homepage-footer></homepage-footer>
 
-<app-signup-page> </app-signup-page>
-<hr>
 
-<ngbd-dropdown-form></ngbd-dropdown-form>
 
