--- a/src/app/dropdown-form/dropdown-form.component.html
+++ b/src/app/dropdown-form/dropdown-form.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col">
       <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownForm1" ngbDropdownToggle>Toggle dropdown</button>
+        <button class="btn btn-outline-secondary" id="dropdownForm1" ngbDropdownToggle>Login</button>
         <div ngbDropdownMenu aria-labelledby="dropdownForm1">
           <form class="px-4 py-3">
             <div class="form-group">
